--- a/testWeb2/.settings/org.eclipse.wst.common.component
+++ b/testWeb2/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="moji-1.0.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/testMoji/testMoji">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="testWeb2"/>
         <property name="java-output-path" value="/testWeb2/target/classes"/>
     </wb-module>
